tests/neg/parse_error.scala
class Main {
  def f1(x: ) = {
    def x = 1 +
  }

  def main = 0
}